# serial-pi

./: .gitignore  README.md  package-lock.json  pyproject.toml  sample_protocol.py  test.py
docs/: build-environment.md  virtual_serial_load.md
src/_sensor/: protocol.py
src/async_pi/: base.py  sensor.py
src/blocking_pi/: sensor.py
src/sensor/: __init__.py  connection.py  frame.py  protocol.py  status.py
tests/: automation-test.py  conftest.py  test_serial_perf.py
tests/helper/: __init__.py  async_reader.py  blocking_reader.py  create_summary.py  metric_monitor.py  perf.py  serial_writer.py  subprocess_managers.py  virt_serial_manager.py
tests/helper/results/20250519_104517/: README.md
tests/perf/: __main__.py  conftest.py  plot_resource_usage.py  test_runner.py
tests/perf/results/20250516_161246/: async_metric.txt
tests/perf/results/20250516_161621/: async_metric.txt
tests/perf/results/20250516_161638/: async_metric.txt  blocking_metric.txt
tests/perf/results/20250516_162126/: async_metric.txt  blocking_metric.txt
tests/perf/results/20250516_162602/: blocking_metric.txt
tests/perf/results/20250516_163348/: async_metric.txt  blocking_metric.txt
tests/perf/results/20250516_165553/: async_metric.txt  blocking_metric.txt
tests/perf/results/20250516_165839/: async_metric.txt  blocking_metric.txt
tests/perf/results/20250516_165940/: async_metric.txt  blocking_metric.txt
tests/perf/results/20250516_171353/: async_metric.txt  blocking_metric.txt
tests/perf/results/20250518_085448/: async_metric.txt  blocking_metric.txt
(+2 files in other folders)
